--- a/AddressBookProj.vcxproj.filters
+++ b/AddressBookProj.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="AddressBookProj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dateType.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddressType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dateType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
