--- a/AddressBookProj.vcxproj.filters
+++ b/AddressBookProj.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="extPersonType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AddressBookType.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddressType.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="extPersonType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AddressBookType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
